Closed Bug 1950798 Opened 1 year ago Closed 1 year ago

[loongarch] Fail to build js (js/src/jit/CodeGenerator.cpp:14998:56: error: use of undeclared identifier 'ins')

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Unspecified
defect

Tracking

()

RESOLVED FIXED
137 Branch
Tracking Status
firefox137 --- fixed

People

(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Changes in bug 1949273 missed a line of code for LoongArch, MIPS and RISCV platforms.

Hardware: Unspecified → Other

It seems to be missed in D238827.

Assignee: nobody → zhaojiazhong-hf
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by jdemooij@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cb7304798214 Fix use of undeclared identifier 'ins'. r=jandem
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 137 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: