Bug 1950798 - Fix use of undeclared identifier 'ins'. r=jandem

It seems to be missed in D238827.

Differential Revision: https://phabricator.services.mozilla.com/D239858